--- a/publications/index.njk
+++ b/publications/index.njk
@@ -11,21 +11,42 @@ mavo: true
 </figure>
 
 <div mv-app="writing" mv-storage="https://github.com/LeaVerou/leaverou.github.io/blob/master/data.json" mv-bar="no-login" mv-plugins="markdown">
-<div property="publicationType" mv-multiple="">
-<h2 property="type" data-count="[count(publication)]" id="[id]">Books</h2>
-<meta property="id" mv-default="[idify(type)]"/>
-<section class="publications">
- 	<article property="publication" mv-multiple="">
-		<a class="title" property="url" target="_blank" rel="noopener noreferrer"><span property="title"></span></a>
-		<p class="authors">
-			<span property="author" mv-multiple="" mv-optional="" class="author [if(author = 'Lea Verou', 'me')]"></span>
-		</p>
-		<footer>
-			<a class="venue" property="venueUrl" target="_blank" rel="noopener noreferrer"><span property="venue"></span></a>
-			<time property="date" datetime="YYYY-MM" mv-default="[$today]"></time>
-		</footer>
-		<div property="comment" class="info comment markdown"></div>
-	</article>
+
+<section id="toc">
+	<h4>On this page…</h4>
+
+	<ul mv-list mv-value="publicationType">
+		<li mv-list-item mv-group>
+			<a href="#[id]">
+				<strong property="publicationCount"></strong>
+				<span property="type"></span>
+			</a>
+		</li>
+	</ul>
+</section>
+
+<div>
+<section property="publicationType" mv-multiple="">
+	<h2 id="[id]">
+		<span class="count" property="publicationCount">[count(publication)]</span>
+		<span property="type">Books</span>
+	</h2>
+	<meta property="id" mv-default="[idify(type)]"/>
+	<section class="publications">
+		<article property="publication" mv-multiple="">
+			<a class="title" property="url" target="_blank" rel="noopener noreferrer"><span property="title"></span></a>
+			<p class="authors">
+				<span property="author" mv-multiple="" mv-optional="" class="author [if(author = 'Lea Verou', 'me')]"></span>
+			</p>
+			<footer>
+				<a class="venue" property="venueUrl" target="_blank" rel="noopener noreferrer"><span property="venue"></span></a>
+				<time property="date" datetime="YYYY-MM" mv-default="[$today]"></time>
+			</footer>
+			<div property="comment" class="info comment markdown"></div>
+		</article>
+	</section>
 </section>
 </div>
+
+
 </div>
