--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="/assets/style.css">
 	{{ includesEnd | safe }}
 </head>
-<body>
+<body class="language-css">
 
 <header>
 	<div class="site-meta">
