--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -353,6 +353,13 @@ figure {
 	}
 }
 
+blockquote {
+	border-inline-start: .15rem solid var(--color-accent);
+	margin-inline-start: 0;
+	padding-left: 1em;
+	font-style: italic;
+}
+
 @property --number {
 	syntax: "<number>";
 	inherits: false;
