--- a/_includes/_post-list.njk
+++ b/_includes/_post-list.njk
@@ -21,11 +21,8 @@
 	</div>
 
 	<footer class="post-meta">
-		<div class="tags">
-			{% for tag in post.data.tags %}{% if tag != "blog" %}
-			<a href="/blog/tag/{{ tag }}">{{ tag }}</a>{% if loop.revindex0 > 0 %}<span class="comma">, </span>{% endif %}
-			{% endif %}{%- endfor -%}
-		</div>
+		{% import "_tag-list.njk" as taglist %}
+		{{ taglist.render(post.data.tags) | safe }}
 	</footer>
 </article>
 
