--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" vocab="https://schema.org/" data-area="{{ siteArea }}">
+<html lang="en" vocab="https://schema.org/" data-area="{{ siteArea }}" data-page="{{ page.url }}">
 <head>
 	<meta charset="UTF-8">
 	<title>{{ title }}{% if title %} &bull; {% endif %}Lea Verou</title>
@@ -72,15 +72,15 @@
 	You are browsing the <a href="/blog/2023/going-lean/">new, beta version</a> of my website.
 	Some things may not work properly.
 
-	<a href="{{ site.old_domain }}{{ page.url }}">View this page on the current website</a>
+	<a href="{{ site.old_domain }}{{ page.url | replace("/blog/", "/") }}">View this page on the current website</a>
 	and if you spot any problems, please <a href="{{ pkg.bugs.url }}">file an issue</a>!
 </section>
 
 {{ content | safe }}
 
 <footer class="post-meta">
-	{% import "_tag-list.njk" as taglist %}
-	{{ taglist.render(tags) | safe }}
+	{% import "_tags.njk" as tags %}
+	{{ tags.list(tags) | safe }}
 
 	<a href="https://github.com/LeaVerou/lea.verou.me/edit/main{{ page.url }}index.md" class="edit-page">Edit on GitHub</a>
 </footer>
