--- a/blog/tags.njk
+++ b/blog/tags.njk
@@ -4,7 +4,7 @@ pagination:
   size: 1
   alias: tag
   filter: ["blog", "all"]
-permalink: /blog/tag/{{ tag }}/
+permalink: /blog/tags/{{ tag }}/
 override:tags: []
 eleventyComputed:
   title: "Posts Tagged “{{ tag | format_tag }}”"
