Default syntax highlighting language per post, fix lang where missing

--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -16,7 +16,7 @@
 	{{ includesEnd | safe }}
 	<script src="/assets/global.js" type="module"></script>
 </head>
-<body class="language-css">
+<body class="language-{{ defaultLanguage or "css" }}">
 
 <header>
 	<div class="site-meta">
