--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -1371,6 +1371,10 @@ pre {
 
 .subtle-markers {
 	& li::marker {
+		color: var(--color-gray-60);
+	}
+
+	&[reversed] li::marker {
 		color: hsl(var(--gray) 50% / calc(1 - var(--index) * .05));
 	}
 }
