--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -123,9 +123,12 @@ html {
 }
 
 body {
+	display: flex;
+	flex-flow: column;
 	background: var(--color-light-3);
 	box-sizing: border-box;
 	margin: 0;
+	min-height: 100vh;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -565,6 +568,7 @@ body > header {
 }
 
 body > main {
+	flex: 1;
 	position: relative;
 	padding: 2rem var(--content-margin) 1rem;
 	font-family: var(--font-serif);
