--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -295,6 +295,12 @@ figure {
 	& figcaption {
 		font: 500 75% var(--font-sans);
 		color: var(--color-gray-medium);
+
+		& a:not(:hover, :focus, :active) {
+			color: inherit;
+			text-decoration: underline;
+			text-decoration-color: color-mix(in lab, currentColor, transparent 70%);
+		}
 	}
 
 	/* Variations */
@@ -736,41 +742,31 @@ body > footer {
 
 /* Code */
 
-:not(pre) > code,
-pre[class*="language-"][class*="language-"],
-pre {
-	background: var(--color-light-2);
+:not(pre) > code:is(code, [class*="language-"]) {
+	padding: .25em .3em .18em;
+	border-radius: .15rem;
+	background: var(--color-light-1);
+	font-size: 80%;
+	font-weight: 500;
+	mix-blend-mode: multiply;
 }
 
-pre {
-	margin: 4rem 0;
-	overflow: auto;
-	padding: 3rem 2rem;
-}
-
-pre code {
+pre > code {
 	background: transparent;
 	padding: 0;
 }
 
-:not(pre) > code[class*="language-"][class*="language-"],
-pre[class*="language-"][class*="language-"],
-pre {
-	background: var(--color-light-2);
-}
-
-pre,
-pre[class*="language-"][class*="language-"] {
+pre:is(pre, [class*="language-"][class*="language-"]) {
 	position: relative;
 	border: 0;
+	overflow: auto;
 	padding: 1rem var(--content-margin) .5rem;
 	margin: 0 calc(-1 * var(--content-margin));
 	border: 0 solid transparent;
 	border-width: 1.5em 0;
 	box-sizing: content-box;
-}
+	background: var(--color-light-2);
 
-pre {
 	clip-path: polygon(var(--clip-top), var(--clip-bottom));
 	--clip-top: 0 0, 100% 2em;
 	--clip-bottom: 100% calc(100% - 1.5em), 0 100%;
