--- a/publications/index.njk
+++ b/publications/index.njk
@@ -6,7 +6,7 @@ mavo: true
 <figure>
 	<img class="main" src="images/css-secrets-closed.jpg" alt="A photo of the CSS Secrets book, closed, on a wooden surface">
 	<a href="images/spread1.jpg" target="_blank"><img src="images/spread1.jpg" alt="CSS Secrets, open in a spread showing a Conic Gradients section"></a>
-	<a href="images/spread2.jpg" target="_blank"><img src="images/spread2.jpg" alt="CSS Secrets, open in a spread showing a Conic Gradients section"></a>
+	<a href="images/spread2.jpg" target="_blank"><img src="images/spread2.jpg" alt="CSS Secrets, open in a spread showing a section with geometry"></a>
 	<figcaption>CSS Secrets, O'Reilly Media 2015</figcaption>
 </figure>
 
