--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -283,6 +283,8 @@ video, img {
 
 pre, code {
 	font-family: var(--font-monospace);
+	font-size: 80%;
+	font-weight: 500;
 }
 
 figure {
@@ -742,16 +744,14 @@ body > footer {
 
 /* Code */
 
-:not(pre) > code:is(code, [class*="language-"]) {
+code:is(code, [class*="language-"]):not(pre *) {
 	padding: .25em .3em .18em;
 	border-radius: .15rem;
 	background: var(--color-light-1);
-	font-size: 80%;
-	font-weight: 500;
 	mix-blend-mode: multiply;
 }
 
-pre > code {
+pre code:is(code, [class*="language-"]) {
 	background: transparent;
 	padding: 0;
 }
