Fix image URLs in post content shown in listings
Because these were relative to the post directory, when shown in a listing, they would 404. This rewrites them to be root-relative in that case.

--- a/_includes/_posts.njk
+++ b/_includes/_posts.njk
@@ -19,10 +19,10 @@
 	{% set summary = post.data.summary or post.data.page.excerpt %}
 	<div class="summary">
 		{% if summary %}
-			{{ summary | md | safe }}
+			{{ summary | md({url: post.data.page.url}) | safe }}
 			<p><a href="{{ post.url | url }}" class="call-to-action">Continue reading</a></p>
 		{% else %}
-			{{ post.content | md | safe }}
+			{{ post.content | md({url: post.data.page.url}) | safe }}
 		{% endif %}
 	</div>
 
