--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -673,7 +673,7 @@ body > footer {
 	}
 }
 
-.post-meta {
+.meta {
 	display: flex;
 	gap: 2em;
 	color: var(--color-gray-medium);
@@ -738,7 +738,7 @@ body > footer {
 }
 
 .post {
-	& .post-meta {
+	& .meta {
 		font-size: 80%;
 	}
 
@@ -750,7 +750,7 @@ body > footer {
 			margin-bottom: .4em;
 		}
 
-		& .post-meta {
+		& .meta {
 			justify-content: center;
 		}
 	}
