Fix footer styling on mobile

--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -671,6 +671,12 @@ body > footer {
 			grid-column-end: span 2;
 		}
 	}
+
+	@media (width <= 600px) {
+		& nav {
+			margin-top: 0;
+		}
+	}
 }
 
 .meta {
